--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ h2{
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 0.9em;
   line-height: 16px;
   display: flex;
   align-items: center;
@@ -58,7 +58,7 @@ h2{
   grid-gap: 13px;
 }
 
-#dice button{
+#dice div{
   display: flex;
   width: 36px;
   height: 36px;
@@ -75,6 +75,7 @@ h2{
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 3.81277px;
   border: none;
+  cursor: pointer;
 
 }
 
