--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ h2{
   grid-gap: 13px;
 }
 
-#dice div{
+#die{
   display: flex;
   width: 36px;
   height: 36px;
@@ -71,7 +71,7 @@ h2{
   color: #2B283A; 
   justify-content: center;
   align-items: center;
-  background: #FFFFFF;
+  /* background: #FFFFFF; */
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 3.81277px;
   border: none;
@@ -94,4 +94,9 @@ h2{
   line-height: 19px;
   color: #FFFFFF;
   cursor: pointer;
+}
+
+
+#rollbtn:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
