--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,8 @@ h2{
 }
 
 #rollbtn {
-  Width:92.16px;
+  Width:150px;
+  /* min-width: 92.16px; */
   Height:35.84px;
   background: #5035FF;
   box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
