--- a/src/index.css
+++ b/src/index.css
@@ -80,9 +80,9 @@ h2{
 }
 
 #rollbtn {
-  Width:150px;
+  width:150px;
   /* min-width: 92.16px; */
-  Height:35.84px;
+  height:35.84px;
   background: #5035FF;
   box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
   border-radius: 3.81277px;
@@ -100,4 +100,27 @@ h2{
 
 #rollbtn:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+@media only screen and (max-width: 430px){
+  #app {
+    width: 300px
+  }
+
+  main {
+    width: 260px;
+  }
+
+  #mainDiv {
+    width: 260px;
+  }
+
+  #die {
+    width: 32px;
+    height: 32px;
+  }
+
+  #rollbtn {
+    width: 120px;
+  }
 }
